# foreman-mcp-server

./: .gitignore  .renovaterc.json  Containerfile  Containerfile.ubi9  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  container.yml  renovate-validator.yml  sync-check.yml
.tekton/: foreman-mcp-server-develop-pull-request.yaml  foreman-mcp-server-develop-push.yaml
docs/: dual-stack-networking.md
src/foreman_mcp_server/: __main__.py  server.py
src/foreman_mcp_server/data/: hammer_basic_information.md  hammer_lifecycle_environment_help.md  hammer_organization_help.md
src/foreman_mcp_server/middleware/: auth.py  logging.py  stdio_auth.py
src/foreman_mcp_server/prompts/: __init__.py  errata.py  reporting.py  template_writing.py
src/foreman_mcp_server/resources/: __init__.py  foreman_api_resource.py  foreman_api_resource_docs.py  foreman_api_resources.py  foreman_dsl_docs.py  foreman_dsl_sections.py  foreman_template_resources.py  hammer_docs.py  hammer_resources.py  remote_execution_features.py
src/foreman_mcp_server/tools/: __init__.py  call_foreman_api.py  call_hammer_commands.py  content_views.py  errata.py  fetch_foreman_dsl_docs.py  get_foreman_api_resource_docs.py  get_foreman_dsl_docs.py  remote_execution.py  tasks.py
src/foreman_mcp_server/utils/: content_utils.py  dsl_docs_utils.py  hammer_utils.py  utils.py
tests/: test_hammer_organization.py  test_test.py
tests/middleware/: test_auth.py  test_logging.py
tests/resources/: test_remote_execution_features.py
tests/tools/: test_call_foreman_api.py  test_call_hammer_commands.py  test_content_views.py  test_errata.py  test_fetch_foreman_dsl_docs.py  test_get_foreman_api_resource_docs.py  test_get_foreman_dsl_docs.py  test_remote_execution.py  test_tasks.py
